OK - got rid of dirty javascript and somewhat managed aria2 seed

--- a/dev_maincell.ipynb
+++ b/dev_maincell.ipynb
@@ -198,7 +198,7 @@
         "clear_output()\n",
         "print('Launching ' + str(gamename) + '...\\n')\n",
         "!pip install -r requirements.txt > /dev/null\n",
-        "!python3.6 play.py\n",
+        "!python play.py\n",
         "print('\\n' + str(gamename) + ' closed. Thanks for playing!')\n"
       ],
       "execution_count": 0,
