--- a/Open_CYOAI_BETA.ipynb
+++ b/Open_CYOAI_BETA.ipynb
@@ -281,32 +281,29 @@
       "source": [
         "# All comments starting with @something are actually \n",
         "# the visible text when the code is hidden.\n",
-        "#@title <- Click this once you're all set { form-width: \"10%\", display-mode: \"form\" }\n",
+        "#@title ← Click this once you're all set { form-width: \"10%\", display-mode: \"form\" }\n",
         "\n",
         "# Here goes all the class imports needed by the cell\n",
         "from google.colab import drive\n",
-        "from IPython.display import clear_output, Javascript\n",
+        "from IPython.display import clear_output\n",
         "from IPython import os\n",
         "\n",
         "# This will mount GDrive into the VM at /content/gdrive/My Drive\n",
-        "# and place us in it\n",
         "print('----------------------------------------------------')\n",
         "print(\"Hello there Anon! Let us begin with the Google login\")\n",
         "print('It will authorize Colab to access your GDrive')\n",
         "print('----------------------------------------------------\\n\\n')\n",
         "drive.mount('/content/gdrive')\n",
-        "root_dir = \"/content/gdrive/My Drive/\"\n",
         "\n",
         "# These variables are dynamically changed depending of the form\n",
-        "#@markdown Choose which modded AIDungeon 2 you want to run\n",
+        "#@markdown <center>Choose which modded AIDungeon 2 you want to run</center>\n",
         "repository = \"thadunge2/AIDungeon\" #@param [\"thadunge2/AIDungeon\", \"cloveranon/Clover-Edition\"]\n",
-        "#@markdown Select the maximum height (in pixels) of the game render\n",
-        "heightmax = 5000 #@param {type:\"slider\", min:0, max:10000, step:100}\n",
-        "#@markdown Double-click here to show/hide the code if you're a curiousfag<br><br>\n",
-        "#@markdown To report a bug: <a href=\"https://github.com/thadunge2/AIDungeon/issues\" target=\"_blank\" >Thadunge2</a> - <a href=\"https://github.com/cloveranon/Clover-Edition/issues\" target=\"_blank\" >Clover-Edition</a> - <a href=\"https://github.com/Kornilov1/AI-Dungeon-2-Anons-modded-Versions-Colab/issues\" target=\"_blank\" >Open-CYOAI (Colab)</a>\n",
+        "#@markdown <center>← Double-click here to show/hide the code if you're a curiousfag →<br>↓</center>\n",
+        "#@markdown <div align=\"right\">To report a bug: <a href=\"https://github.com/thadunge2/AIDungeon/issues\" target=\"_blank\" >Thadunge2</a> - <a href=\"https://github.com/cloveranon/Clover-Edition/issues\" target=\"_blank\" >Clover-Edition</a> - <a href=\"https://github.com/OpenCYOAI/OpenCYOAI/issues\" target=\"_blank\" >Open-CYOAI (Colab)</a></div>\n",
         "# This small code sets all variables needed according to the repository variable\n",
         "# Is compatible with any repo using the standard filesystem. Just ad a new \"if (repo...\" block\n",
         "# and enter the repo variables to set it up.\n",
+        "root_dir = \"/content/gdrive/My Drive/\"\n",
         "if (repository == \"thadunge2/AIDungeon\"):\n",
         "  gamename = \"AIDungeon\"\n",
         "  gamefolder = \"AIDungeon\"\n",
@@ -322,10 +319,9 @@
         "  gamefolder = \"Clover-Edition\"\n",
         "  gamepath = \"/content/gdrive/My Drive/Clover-Edition\"\n",
         "  modelsfolder = \"/content/gdrive/My Drive/Clover-Edition/models/\"\n",
-        "  modelpath = \"/content/gdrive/My Drive/Clover-Edition/models/pytorch-gpt2-xl-aid2-v5\"\n",
+        "  modelpath = \"/content/gdrive/My Drive/Clover-Edition/models/model_v5_pytorch\"\n",
         "  remotegit = \"https://github.com/cloveranon/Clover-Edition\"\n",
         "  modeltorrent = \"https://raw.githubusercontent.com/cloveranon/Clover-Edition/master/model.torrent\"\n",
-        "  zipname = None\n",
         "  torrentfile = \"model.torrent\"\n",
         "\n",
         "# This is the main code. It checks the existence of the game main folder and\n",
@@ -347,16 +343,15 @@
         "            answer = input('\\n' + str(gamename) + \"'s folder not found. Do you want to install \" + str(gamename) + \"? (yes, y / no, n)\\n\\n\")\n",
         "            if answer in (\"yes\",\"y\"):\n",
         "                %cd -q $root_dir\n",
-        "                !git clone $remotegit\n",
+        "                !git clone --depth 1 $remotegit\n",
         "                %cd -q $gamefolder\n",
         "                !pip install -r requirements.txt\n",
         "                !apt-get install aria2\n",
-        "                %cd $modelsfolder\n",
+        "                %cd -q $modelsfolder\n",
         "                !wget $modeltorrent\n",
-        "                !unzip $zipname \n",
+        "                if (gamename == 'AIDungeon'):\n",
+        "                    !unzip $zipname \n",
         "                !aria2c --file-allocation=none --max-connection-per-server 16 --split 64 --bt-max-peers 500 --seed-time=0 --summary-interval=15 --disable-ipv6 $torrentfile\n",
-        "                if os.path.isdir('model_v5_pytorch'):\n",
-        "                    !mv model_v5_pytorch pytorch-gpt2-xl-aid2-v5\n",
         "                if os.path.isdir(gamepath):\n",
         "                    print('\\n\\n----------------------------------------------------')\n",
         "                    print(str(gamename) + \"'s successfully installed!\")\n",
@@ -390,15 +385,16 @@
         "            answer = input(\"\\n\\nModel folder not found!\\nDo you want to try to download it again?\\n\\n\")\n",
         "            if answer in (\"yes\",\"y\"):    \n",
         "                !apt-get install aria2\n",
-        "                %cd $modelsfolder\n",
+        "                %cd -q $modelsfolder\n",
         "                !wget $modeltorrent\n",
-        "                !unzip $zipname \n",
+        "                if (gamename == 'AIDungeon'):\n",
+        "                    !unzip $zipname \n",
         "                !aria2c --file-allocation=none --max-connection-per-server 16 --split 64 --bt-max-peers 500 --seed-time=0 --summary-interval=15 --disable-ipv6 $torrentfile\n",
-        "                if os.path.isdir('model_v5_pytorch'):\n",
-        "                    !mv model_v5_pytorch pytorch-gpt2-xl-aid2-v5\n",
+        "                # Line above comment stops after download. Line after comment restart aria2 and seed quietly. Dirty but functional at least\n",
+        "                !aria2c --file-allocation=none --max-connection-per-server 16 --split 64 --bt-max-peers 500 --seed-ratio=0.0 --summary-interval=15 --disable-ipv6 --quiet=True -V $torrentfile\n",
         "                if os.path.isdir(modelpath):\n",
         "                    print('\\n\\n----------------------------------------------------')\n",
-        "                    print(\"model folder found!\")\n",
+        "                    print(\"Model folder found!\")\n",
         "                    print('----------------------------------------------------\\n\\n')\n",
         "                else:\n",
         "                    input(\"The model folder is still not there.\\nSend this to the thread :\\nERROR : MISSING MODEL_V5 STANDARD CHECK RE DOWNLOAD FAIL\\nThe cell will crash now, please press ENTER...\\n\")\n",
@@ -417,14 +413,13 @@
         "# The last bits of code. Checking for update verbose mode to\n",
         "# show the message when it's already up-to-date.\n",
         "%cd -q $gamepath\n",
-        "!pip install -r requirements.txt\n",
         "!git fetch -v\n",
         "# Asking if you want to update. might be a way to hook the fetch result and\n",
         "# determine if it's needed, but it's quite minor. For now, this will do the job.\n",
         "answer = None\n",
         "while answer not in (\"yes\",\"no\",\"y\",\"n\"):\n",
         "    try:\n",
-        "        answer = input(\"Do you need/want to update?\\n\")\n",
+        "        answer = input(\"\\nDo you need/want to update?\\n\")\n",
         "        if answer in (\"yes\",\"y\"):\n",
         "            !git pull\n",
         "        elif answer in (\"no\",\"n\"):\n",
@@ -435,14 +430,11 @@
         "    except KeyboardInterrupt:\n",
         "        print(\"Accepted inputs: yes, y, no, n.\\n\")\n",
         "# Launching the game\n",
-        "try:\n",
-        "    input('\\nPress Enter to play...\\n')\n",
-        "except KeyboardInterrupt:\n",
-        "    pass\n",
         "clear_output()\n",
-        "display(Javascript('''google.colab.output.setIframeHeight(0, true, {maxHeight: heightmax})'''))\n",
+        "print('Launching ' + str(gamename) + '...\\n')\n",
+        "!pip install -r requirements.txt > /dev/null\n",
         "!python play.py\n",
-        "print(str(gamename) + ' closed. Thanks for playing!')"
+        "print('\\n' + str(gamename) + ' closed. Thanks for playing!')\n"
       ],
       "execution_count": 0,
       "outputs": []
